@@ -20,6 +20,8 @@ Date:
     Features:
         - (SA) Process accessiblilty of captured spawners, which also fixes biter eggs and subsequent Gleba recipes.
         - (SA) Add support for the capture-spawner technology trigger.
+        - Add the remaining research triggers and the mining-with-fluid research effect to the dependency/milestone
+          analysis.
     Internal changes:
         - Using the LuaContext after it is freed now produces a better error.
 ----------------------------------------------------------------------------------------------------------------------
